   ie. light.colour=0,0,1 || [0,0,1] || (0,0,1) || Ogre.ColourValue(0,0,1)  now work
* Fixed Quaternion multiplication by a float
* Remove auto converstions in _ogre_main so hopefully don't get strange obj to obj conversions
* Added Hinge etc callbacks to OgreNewt (missing) via hand wrappers
   
20 Feb 2007:  Version 0.9 Release
=================================
* Python style iterator access to all Map and Vector iterators 
  (you can still access the iterators using the C++ methods)
  So now a "for r in fm.getResourceIterator():" is valid
* getByName and getByHandle methods of ResourceManager (and it's subclasses)
  now automatically returns the correct Object type - previously it returned
  a 'Resource' (which is how the C++ library works) - now it will return a 
  Texture/Font/Mesh as appropiate
* Documentation has been improved - all "Special Funtions/modifications" 
  have pydoc strings that start with "Python-Ogre...."
* New return policies have allowed us to exposed 'Image::getData', 
  MemoryDataStream::getPtr' etc
* Factory classes have been included (again) in the build - there was 
  dicusssion as to how useful they might be but there isn't any harm...
* OgreOde demos included in the release
* Matrix3[0..2] returns a tuple holding the matrix row
* Minor improvements in tuple handling, multiplication of Quats etc works again
* Built with the CVS version of Ogre 1.4RC1..
* Getmultimapsettings helper function removed as multimaps now fully supported..
    ### settings_tuples = config.getMultiMapSettings(settings)
    ##for resource_type, resource in settings_tuples:
    ##    self.rgm.addResourceLocation(resource, resource_type, section_name)
    for item in settings:
        self.rgm.addResourceLocation(item.value, item.key, section_name)            
* _ConfigOption and other structures exposed correctly and now work
              
04 feb 2007:  Version 0.8 Release
=================================